Fix dark mode

--- a/style/stylesheets/betterttv-dark.css
+++ b/style/stylesheets/betterttv-dark.css
@@ -2384,3 +2384,14 @@ span.subscribe-text {
 .chatReplay .loading-spinner-container {
     background: rgba(10,10,10,.85);
 }
+
+/* host & playlist banner fix */
+.player-column .brick, .host-frame .brick {
+	background-color: #222;
+	border-left: 5px solid #6441a5 !important;
+	box-shadow: 0px 0 0 #6441a4 inset !important;
+}
+
+.what {
+    background-color: #6441a5;
+}
